**1.67.0**
* Balanced Beerwarts
    - Increased magician price growing
    - Increased training price growing
    - Limited the training duration to max. 1000 days (#54)
* Moved the ComposedValueRegistry into a separate library
* Refactored BeerBank to represent the current investment as a ComposedValue
* Bugfixes:
    - The owned plops label isn't reset after a sacrifice
    - Automated Bottle Cap Factory level up doesn't check if there are enough Bottle Cap Factories to level up

**1.66.0**
* Remove translated labels from the save state (#47)
* Update to Twig 3.0
* Bugfixes:
    - Recursion without break condition for build automation

**1.65.0** - 05.12.2019
* Added additional options to control production statistics
    - Option to disable production statistics (#82)
    - Option to display production graphs on a linear scale instead of logarithmic
* Optimize loading of the save state list (#83)
* Added basic building statistics to building details modal (#71)
* Automatically extend production statistic graphs if a building details modal stays open
* Bugfixes:
    - Save state size increases (#79)
    - NaN values in Beer Factories (#78)
    - Building overlays don't open in Edge
    - Modals with dynamic content don't clear their content after being closed
    - Automatic Bottle Cap Factory level ups don't consume plops

**1.64.0** - 28.11.2019
* Remove translated labels from the save state (#47)
* Password reset

**1.63.0** - 25.11.2019
* Removed metadata from svg images to reduce loading overhead (#75)
* Added additional upgrade paths to Beer Factories
* Bugfixes:
    - Layout of lobbyists (Beer Factory)
    - Transport capacity doesn't update after constructing a Workers' Lodge (Beer Factory)
    - Names disappear if input element is empty (Beer Factory, Beerwarts, Beer Bank Banker)
    - Wrong redirect after loading a save state

**1.62.0** - 18.11.2019
* Added auto upgrade buyer (#39)
* Added additional achievements
* Bugfixes: