@@ -1,0 +1,18 @@
+<div class="building-container__cloning-container d-none">
+  <div class="building-container__clone-tooltip"
+       data-toggle="tooltip"
+       data-boundary="window"
+       data-placement="{{ placement | default('left') }}"
+       data-html="true"
+  >
+    <fieldset disabled>
+      <button type="button"
+              class="btn btn-raised btn-primary building-container__clone-building"
+              style="width:100%"
+              data-building-key="{{ building }}"
+      >
+        {{ translator.translate('beerCloner.cloning.clone') }} <span class="clone-level"></span>
+      </button>
+    </fieldset>
+  </div>
+</div>
